--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "luxon": "^1.27.0",
     "socket.io": "^4.1.2"
   },
   "devDependencies": {
